[project]
name = "you"
version = "0.1.0"
description = "you using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
you = "you.main:run"
run_crew = "you.main:run"
train = "you.main:train"
replay = "you.main:replay"
test = "you.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
